fix spacing of principles on services page

--- a/src/ui/components/PageServices/stylesheet.css
+++ b/src/ui/components/PageServices/stylesheet.css
@@ -8,6 +8,12 @@
   composes: 'layout';
 }
 
+@media (max-width: 887px) {
+  .principles-first-row {
+    margin-bottom: 8rem;
+  }
+}
+
 @export button;
 @export typography;
 @export layout;
